--- a/styles/style.css
+++ b/styles/style.css
@@ -1,44 +1,95 @@
 * {
+  height: 100%;
   padding: 0px;
   margin: 0px;
   box-sizing: border-box;
-  border: 1px solid red;
 }
 
-html, body {
-  height: 100%;
-  width: 100%;
+.title-container {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  background-color: #242424;
+  font-family: 'Roboto Mono', monospace;  color: #f4f4f4;
+  font-size: 48px;
+  border-radius: 5px;
+  padding: 5px;
+  width: 470px;
+  height: 410px;
 }
 
-h1 {
-  text-align: center;
+select, label {
+  background-color: #f4f4f4;
+  font-family: 'Roboto Mono', monospace;
+  color: #242424;
+  border: none;
+  padding: 3pt;
+  font-size: 12pt;
+}
+
+label {
+  border-top-left-radius: 5pt;
+  border-bottom-left-radius: 5pt;
+}
+
+select {
+  border-top-right-radius: 5pt;
+  border-bottom-right-radius: 5pt;
+}
+
+.title-container > p {
+  font-size: 14px;
 }
 
 .game-container {
   display: flex;
   flex-direction: column;
+  justify-content: space-between;
+  background-color: #242424;
+  font-size: 18px;
+  width: 470px;
+  height: 410px;
+  border-radius: 5pt;
 }
 
 .play-button-container,
 .round-number-container
  {
+  font-family: 'Roboto Mono', monospace;
   display:flex;
   justify-content: center;
+  align-items: center;
 }
 
-h1,
-.round-number-container,
-.play-button-container {
-  padding-bottom: 30px;
+label,
+select,
+.round-number-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 50%;
 }
 
-.footer {
-  height: 100%;
-  text-align: center;
+#play-button {
+  color:#242424;
+  background-color: #f4f4f4;
+  width: 75px;
+  height: 50px;
+  border-radius: 10px;
+  border: none;
+  font-family: 'Roboto Mono', monospace;
+  font-weight: bold;
+  font-size: 18px;
 }
 
-#site-container {
-  height: 100%;
-  width: 100%;
-  border-collapse: collapse;
+#play-button:hover {
+  transform: scale(1.1);
+  background-color: #e4e4e4;
+}
+
+.site-container {
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
 }
